--- a/src/ECFP.ipynb
+++ b/src/ECFP.ipynb
@@ -9,14 +9,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f39a61b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "96c48af6",
    "metadata": {},
@@ -411,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "15802b88",
    "metadata": {},
    "outputs": [],
@@ -425,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "55c213f4",
    "metadata": {},
    "outputs": [
@@ -437,7 +429,14 @@
       "Data loaded successfully.\n",
       "\n",
       "Starting GridSearch for Random Forest...\n",
-      "Fitting 3 folds for each of 540 candidates, totalling 1620 fits\n"
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
+      "...GridSearch complete in 12.25 seconds.\n",
+      "\n",
+      "Best parameters found: {'max_depth': 10, 'min_samples_leaf': 5, 'n_estimators': 300}\n",
+      "Best Model Validation AUROC: 0.8272\n",
+      "\n",
+      "--- Final Random Forest Performance ---\n",
+      "Test AUROC: 0.8394\n"
      ]
     }
    ],
@@ -463,11 +462,9 @@
     "# Define the \"grid\" of hyperparameters to test\n",
     "# This is a small grid to run quickly. You can expand it.\n",
     "param_grid = {\n",
-    "    'n_estimators': [100, 300, 500, 1000],       \n",
-    "    'max_depth': [10, 20, 50, 100, None],          \n",
-    "    'min_samples_leaf': [1, 2, 5],\n",
-    "    'min_samples_split': [2, 5, 10],\n",
-    "    'max_features': ['sqrt', 0.25, 0.5] # 'sqrt' is default, 0.5 means 50% of features\n",
+    "    'n_estimators': [100, 300],       # Number of trees\n",
+    "    'max_depth': [10, 50, None],          # Max depth of each tree\n",
+    "    'min_samples_leaf': [1, 5]        # Min molecules in a leaf node\n",
     "}\n",
     "\n",
     "# Initialize GridSearch\n",
@@ -513,6 +510,35 @@
     "\n",
     "print(f\"\\n--- Final Random Forest Performance ---\")\n",
     "print(f\"Test AUROC: {auc_test_rf:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c978ded7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9467    0.9726    0.9595       146\n",
+      "           1     0.3333    0.2000    0.2500        10\n",
+      "\n",
+      "    accuracy                         0.9231       156\n",
+      "   macro avg     0.6400    0.5863    0.6047       156\n",
+      "weighted avg     0.9074    0.9231    0.9140       156\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_pred_rf = best_rf.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred_rf, digits=4))"
    ]
   }
  ],
